# NRF54LM20DK_SPACE_GAME

./: README.md
common/: display_palette.h  shared_display.h
displaydriver/: CMakeLists.txt  prj.conf
displaydriver/boards/: nrf54lm20dk_nrf54lm20a_cpuflpr.overlay
displaydriver/src/: main.c  st7365.c  st7365.h
displaytest/: CMakeLists.txt  prj.conf  sysbuild.cmake
displaytest/.claude/: settings.local.json
displaytest/boards/: nrf54lm20dk_nrf54lm20a_cpuapp.overlay
displaytest/src/: font.h  game.c  game.h  main.c  render.c  render.h
